Start working on SmallAllocator

--- a/week2/small_allocator/Makefile
+++ b/week2/small_allocator/Makefile
@@ -1,2 +1,4 @@
 all:
-	gcc -o small_allocator samll_allocator.c
+	g++ -o small_allocator small_allocator.cpp 
+# The command above should be as one below in case gcc calling:
+#       gcc -o small_allocator small_allocator.cpp -lstdc++
