--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "utility": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "types.h": "c"
     }
 }
