Keep doing week3 first practice lesson

--- a/week3/Makefile
+++ b/week3/Makefile
@@ -3,4 +3,5 @@ all: build_server
 build_server:
 # -ggdb - добавить отладочную информацию
 # -O0   - установить уровень оптимизации в ноль
+# -o    - результат компиляции и сборки
 	gcc -ggdb -O0 -o server server.c
