Start writing client.c

--- a/week3/Makefile
+++ b/week3/Makefile
@@ -5,3 +5,6 @@ build_server:
 # -O0   - установить уровень оптимизации в ноль
 # -o    - результат компиляции и сборки
 	gcc -ggdb -O0 -o server server.c
+
+build_client:
+	gcc -ggdb -O0 -o client client.c
