--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "utility": "cpp",
         "ostream": "cpp",
         "types.h": "c",
-        "ev.h": "c"
+        "ev.h": "c",
+        "iostream": "cpp"
     }
 }
