Commit vscode stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "ostream": "cpp",
         "types.h": "c",
         "ev.h": "c",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "signal.h": "c"
     }
 }
