--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "*.ipp": "c",
         "*.tcc": "c",
         "fstream": "c",
-        "sem.h": "c"
+        "sem.h": "c",
+        "thread": "c"
     }
 }
